tests/ui/sync/suggest-ref-cell.stderr
error[E0277]: `RefCell<()>` cannot be shared between threads safely
  --> $DIR/suggest-ref-cell.rs:6:20
   |
LL |     require_sync::<std::cell::RefCell<()>>();
   |                    ^^^^^^^^^^^^^^^^^^^^^^ `RefCell<()>` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `RefCell<()>`
   = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
note: required by a bound in `require_sync`
  --> $DIR/suggest-ref-cell.rs:1:20
   |
LL | fn require_sync<T: Sync>() {}
   |                    ^^^^ required by this bound in `require_sync`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
